--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</a>	
 		<div id="site-title">
 			<h5>Welcome to</h5>
-			<h1>Mimi & Bissi Website</h1>
+			<h1>Mimi And Bissi Website</h1>
 		</div>	
 		<div class="fixed-bottom comp-name">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<p>
