--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		  Your browser does not support the video tag.
 		</video>
 	
-	<!--	
+	<!--
 		<OBJECT CLASSID="clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B"
 		CODEBASE="http://www.apple.com/qtactivex/qtplugin.cab" WIDTH="400" 
 		HEIGHT="180" >
@@ -59,7 +59,7 @@
 		PLUGINSPAGE="http://www.apple.com/quicktime/download" WIDTH="640" 
 		HEIGHT="400" AUTOPLAY="true"></EMBED>
 		</OBJECT>		
-	-->	
+	-->
 		
 		<a class="close-video" href="#screen2">
 			<img src="images/close_icn.png"/>
@@ -74,21 +74,21 @@
 	<!-- Scrollbox images -->
     <div id="demo5" class="scroll-img"> 	
       <ul>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
-        <li><img src="images/aloe.jpg" /></a></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
+        <li><img src="images/aloe.jpg" /></li>
       </ul>
     </div> 
 
