--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 			<h1>Mimi And Bissi Website</h1>
 		</div>	
 		<div class="fixed-bottom comp-name">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<p>
+			<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+			</p>
 			<a class="video-link" href="#screen2-1">	
 				<span class="glyphicon glyphicon-triangle-right" aria-hidden="true">				
 			</a>
